# zinnias-ciao

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  NOTICE  README.md  ROADMAP.md  package.json  wrangler.toml
.github/workflows/: ci.yml
docs/src/: SUMMARY.md  architecture.md  audit-policy.md  backup-recovery.md  deployment.md  launch-runbook.md  operations.md  overview.md  quick-start.md  release-checklist.md  staging-runtime-prototype.md
migrations/: 0001_initial.sql  0002_form_tokens_nullable_user.sql  0003_invite_grants_role.sql  0004_calendar_tokens.sql  0005_event_templates.sql  0006_event_recurrence.sql  0007_codlet_tables.sql  0008_membership_relink_codes.sql  0009_recurrence_v2.sql
rfcs/: README.md
rfcs/done/: 000-rfc-lifecycle-policy.md  001-project-bootstrap-cloudflare-leptos-d1.md  002-data-model-and-d1-migrations.md  003-invite-redemption-and-session-auth.md  004-community-isolation-and-authorization.md  005-member-home-and-event-detail-ui.md  006-participation-status-lifecycle.md  007-notes-and-comment-safety.md  008-offline-cache-mutation-queue-and-sync.md  009-admin-event-management.md  010-admin-invite-and-member-management.md  011-accessibility-and-design-system.md  012-security-hardening-and-abuse-controls.md  013-api-contracts-error-model-and-idempotency.md  014-observability-audit-and-privacy-logging.md  015-testing-qa-and-release-gates.md  016-deployment-environments-and-operations.md  017-pwa-installability-and-service-worker.md  018-timezone-and-event-cutoff-policy.md  019-retention-soft-delete-and-data-lifecycle.md  022-recurring-events-and-event-series.md  023-optional-calendar-export-and-ics-interop.md  024-display-name-recovery-and-admin-mediated-account-relinking.md  025-community-moderation-abuse-response-and-member-safety.md  026-multi-language-and-plain-language-localization.md  027-import-export-human-readable-backup-and-data-portability.md  028-backup-restore-and-disaster-recovery-operations.md  029-scalability-and-query-performance-discipline.md  030-admin-onboarding-first-community-setup-and-empty-states.md  032-event-templates-and-quick-create-for-non-technical-admins.md  035-support-diagnostics-and-user-help-without-data-leakage.md  036-public-release-readiness-security-review-and-launch-runbook.md  037-token-subject-and-form-token-atomicity.md  038-session-and-secret-binding-hardening.md  039-timezone-correct-event-write-path.md  040-event-edit-contract.md  041-atomic-invite-redemption.md  042-pilot-offline-and-private-cache-contract.md  043-pilot-ux-acceptance-and-error-feedback.md  046-event-bound-status-token.md  (+21 more)
rfcs/proposed/: 001-project-bootstrap-cloudflare-leptos-d1.md  002-data-model-and-d1-migrations.md  003-invite-redemption-and-session-auth.md  004-community-isolation-and-authorization.md  005-member-home-and-event-detail-ui.md  006-participation-status-lifecycle.md  007-notes-and-comment-safety.md  008-offline-cache-mutation-queue-and-sync.md  009-admin-event-management.md  010-admin-invite-and-member-management.md  011-accessibility-and-design-system.md  012-security-hardening-and-abuse-controls.md  013-api-contracts-error-model-and-idempotency.md  014-observability-audit-and-privacy-logging.md  015-testing-qa-and-release-gates.md  016-deployment-environments-and-operations.md  017-pwa-installability-and-service-worker.md  018-timezone-and-event-cutoff-policy.md  019-retention-soft-delete-and-data-lifecycle.md  020-design-assets-prototype-and-handoff.md  021-post-mvp-notification-strategy-and-reminder-digests.md  022-recurring-events-and-event-series.md  023-optional-calendar-export-and-ics-interop.md  024-display-name-recovery-and-admin-mediated-account-relinking.md  025-community-moderation-abuse-response-and-member-safety.md  026-multi-language-and-plain-language-localization.md  027-import-export-human-readable-backup-and-data-portability.md  028-backup-restore-and-disaster-recovery-operations.md  029-scalability-and-query-performance-discipline.md  030-admin-onboarding-first-community-setup-and-empty-states.md  031-consentful-contact-channels-and-privacy-safe-messaging.md  032-event-templates-and-quick-create-for-non-technical-admins.md  033-subgroups-event-visibility-and-boundary-safety.md  034-notification-free-quiet-mode-and-attention-design.md  035-support-diagnostics-and-user-help-without-data-leakage.md  036-public-release-readiness-security-review-and-launch-runbook.md  (+15 more)
scripts/: bootstrap-cloudflare.mjs  recover-community-access.mjs  runtime-smoke.mjs  setup.mjs
src/: app.rs  lib.rs
src/app/: layout.rs  (+2 more)
style/: README.md  daisyui.js  tailwind.css
workers/ssr/: Cargo.toml
workers/ssr/src/: audit.rs  authz.rs  codlet.rs  crypto.rs  db.rs  errors.rs  form_token.rs  handlers.rs  lib.rs  rate_limit.rs  render.rs  session.rs
workers/ssr/src/crypto/: tests.rs
workers/ssr/src/db/: attendance.rs  calendar.rs  community.rs  event.rs  event_note.rs  event_series.rs  event_template.rs  event_write.rs  invite.rs  membership.rs  relink.rs  session.rs
workers/ssr/src/handlers/: admin.rs  auth.rs  calendar.rs  communities.rs  community.rs  community_create.rs  event.rs  export.rs  health.rs  home.rs  join.rs  me.rs  operator.rs  relink.rs  static_files.rs  templates.rs
workers/ssr/src/handlers/admin/: events.rs  help_signin.rs  member_remove.rs  members.rs  role_transfer.rs
workers/ssr/src/handlers/admin/events/: attendance.rs  cancel.rs  copy.rs  create.rs  edit.rs  forms.rs  notes.rs  occurrence.rs  policy.rs  recreate.rs  summary.rs  support.rs  tests.rs
workers/ssr/src/handlers/calendar/: tests.rs
workers/ssr/src/handlers/communities/: calendar.rs  matrix.rs  tests.rs
workers/ssr/src/handlers/communities/calendar/: events.rs
workers/ssr/src/handlers/communities/matrix/: cells.rs  detail.rs
workers/ssr/src/handlers/community/: tests.rs
workers/ssr/src/handlers/operator/: tests.rs
workers/ssr/src/render/: errors.rs  event_card.rs  nav.rs  notes.rs  participants.rs  shell.rs  status.rs  tests.rs  time.rs
workers/ssr/static/: app.css  app.js  manifest.webmanifest  sw.js
(+37 files in other folders)
