[workspace]
resolver = "2"
members = [
    "packages/domain",
    "packages/contracts",
    "workers/ssr",
]

[workspace.package]
version     = "0.18.0"
edition     = "2024"
license     = "Apache-2.0"
authors     = ["nabbisen"]
repository  = "https://github.com/nabbisen/zinnias-ciao"

[workspace.dependencies]
worker      = { version = "0.8", features = ["d1", "http"] }
serde       = { version = "1",       features = ["derive"] }
serde_json  = { version = "1" }
thiserror   = { version = "2" }
time        = { version = "0.3",     features = ["formatting", "parsing", "macros"] }
uuid        = { version = "1",       features = ["v4"] }
hmac        = { version = "0.12" }
sha2        = { version = "0.10" }
hex         = { version = "0.4" }
getrandom   = { version = "0.2",     features = ["js"] }  # js feature required for wasm32 target

[profile.release]
opt-level = "s"   # minimise WASM bundle size
