[workspace]
resolver    = "3"
members     = [
    "packages/domain",
    "packages/contracts",
    "workers/ssr",
]

[workspace.package]
version     = "0.38.6"
edition     = "2024"
license     = "Apache-2.0"
authors     = ["nabbisen"]
repository  = "https://github.com/nabbisen/zinnias-ciao"

[workspace.dependencies]
zinnias-ciao-domain         = { version = "0", path = "packages/domain" }
zinnias-ciao-contracts      = { version = "0", path = "packages/contracts" }

worker                      = { version = "0.8", features = ["d1", "http"] }

# codlet auth library core types. Runtime integration stays service-owned.
codlet                      = "0.17"

serde                       = { version = "1", features = ["derive"] }
serde_json                  = "1"
thiserror                   = "2"
time                        = { version = "0.3", features = ["formatting", "parsing", "macros"] }
uuid                        = { version = "1", features = ["v4"] }
hmac                        = "0.12"
sha2                        = "0.10"
hex                         = "0.4"
# wasm_js feature required for wasm32 target
getrandom                   = { version = "0.4", features = ["wasm_js"] }

[profile.release]
opt-level = "s"   # minimise WASM bundle size
